<resources>

    <string name="app_name">MiroGal</string>

    <!--region Auth-->
    <string name="auth_login_hint">Login</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_btn_login">Login</string>
    <string name="auth_message_invalid_login">Invalid login</string>
    <string name="auth_message_invalid_password">Invalid password</string>
    <!--endregion-->

    <!--region Profile-->
    <string name="profile_label">Profile</string>
    <string name="profile_btn_logout">Logout</string>
    <!--endregion-->

    <!--region Settings-->
    <string name="settings_label">Settings</string>
    <string name="settings_show_bottom_nav_label">Show navigation bar titles</string>
    <string name="settings_show_battery_indicator">Show battery indicator</string>
    <!--endregion-->

    <!--region Main-->
    <string name="main_bottom_nav_drink">Cocktails</string>
    <string name="main_bottom_nav_profile">Profile</string>
    <string name="main_bottom_nav_settings">Settings</string>
    <!--endregion-->

    <!--region DrinkHistory-->
    <string name="drink_pager_label">Cocktails</string>
    <string name="drink_pager_tab_history">History</string>
    <string name="drink_pager_tab_favorite">Favorite</string>
    <string name="drink_pager_snackbar_message">View</string>
    <string name="drink_pager_snackbar_action_open_detail">Open</string>
    <string name="drink_pager_receiver_airplane_mod_message_on">Смакуйте маргаритку із відчуттям міри. І надіємося, що Ви не пілот під  час польоту</string>

    <string name="drink_history_message_empty">History is empty</string>
    <string name="drink_favorite_message_empty">Favorite is empty</string>
    <string name="drink_history_item_btn_favorite_description">Add/Delete from favorite</string>

    <string name="drink_history_item_menu_action_open">Open</string>
    <string name="drink_history_item_menu_shortcut">Add shortcut</string>
    <string name="drink_history_item_menu_pin_shortcut">Add pin shortcut</string>
    <string name="drink_history_item_menu_favorite">Add/Remove from favorite</string>
    <string name="drink_history_item_menu_delete">Delete from history</string>

    <string name="drink_favorite_item_menu_action_open">Open</string>
    <string name="drink_favorite_item_menu_shortcut">Add shortcut</string>
    <string name="drink_favorite_item_menu_pin_shortcut">Add pin shortcut</string>
    <string name="drink_favorite_item_menu_favorite">Remove from favorite</string>

    <string name="drink_item_menu_toast_shortcut_added">cocktail shortcut added</string>
    <string name="drink_item_menu_toast_shortcut_not_added">Cocktail shortcut is not added\nThe function supported just from Android Nougat++</string>

    <string name="drink_item_menu_toast_pin_shortcut_added">cocktail pin shortcut added</string>
    <string name="drink_item_menu_toast_pin_shortcut_not_added">Cocktail shortcut is not added\nThe function supported just from Android Oreo</string>

    <!--endregion-->

    <!--region Filter-->
    <string name="drink_filter_label">Filters</string>
    <string name="drink_filter_btn_reset">Reset</string>
    <string name="drink_filter_btn_result_found">Results</string>
    <string name="drink_filter_btn_result_not_found">Not found</string>

    <string name="drink_filter_alcohol_title">Alcohol</string>
    <string name="drink_filter_alcohol_disable">Disable filter</string>
    <string name="drink_filter_alcohol_alcoholic">Alcoholic</string>
    <string name="drink_filter_alcohol_non_alcoholic">Non alcoholic</string>
    <string name="drink_filter_alcohol_optional_alcohol">Optional alcohol</string>

    <string name="drink_filter_category_title">Category</string>
    <string name="drink_filter_category_disable">Disable filter</string>
    <string name="drink_filter_category_ordinary_drink">Ordinary Drink</string>
    <string name="drink_filter_category_cocktail">Cocktail</string>
    <string name="drink_filter_category_milk_float_shake">Milk / Float / Shake</string>
    <string name="drink_filter_category_other_unknown">Other / Unknown</string>
    <string name="drink_filter_category_cocoa">Cocoa</string>
    <string name="drink_filter_category_shot">Shot</string>
    <string name="drink_filter_category_coffee_tea">Coffee / Tea</string>
    <string name="drink_filter_category_homemade_liqueur">Homemade Liqueur</string>
    <string name="drink_filter_category_punch_party_drink">Punch / Party Drink</string>
    <string name="drink_filter_category_beer">Beer</string>
    <string name="drink_filter_category_soft_drink_soda">Soft Drink / Soda</string>
    <!--endregion-->

    <!--region SearchList-->
    <string name="search_label">Search Cocktail</string>
    <string name="search_message_empty">No cocktails found</string>
    <string name="search_message_start">Enter text to start search</string>
    <string name="search_toolbar_btn_search">Search</string>
    <!--endregion-->

    <!--region Detail-->
    <string name="detail_label">Cocktail Details</string>
    <string name="detail_info_title">Basic information</string>
    <string name="detail_info_name">Name:</string>
    <string name="detail_info_alcoholic">Alcoholic:</string>
    <string name="detail_info_glass">Glass:</string>
    <string name="detail_ingredient_title">Ingredients</string>
    <string name="detail_instruction_title">Instructions</string>
    <!--endregion-->

    <string name="dialog_drink_filter_title">drink filter</string>
    <string name="dialog_drink_sort_title">Sort cocktails</string>
    <string name="dialog_btn_cancel">Cancel</string>

</resources>
