<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:title="@string/drink_history_item_menu_action_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shortcut"
        android:title="@string/drink_favorite_item_menu_shortcut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pin_shortcut"
        android:title="@string/drink_history_item_menu_pin_shortcut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/drink_history_item_menu_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/drink_history_item_menu_delete"
        app:showAsAction="never" />

</menu>