<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_horizontal"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp">
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_vertical"
            android:layout_marginBottom="@dimen/padding_vertical"
            android:layout_marginLeft="@dimen/padding_horizontal"
            android:layout_marginRight="@dimen/padding_horizontal">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:layout_marginEnd="@dimen/padding_horizontal"
                    android:textStyle="bold"
                    android:text="@string/detail_info_name" />
                <TextView
                    android:id="@+id/tv_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:layout_marginEnd="@dimen/padding_horizontal" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:layout_marginEnd="@dimen/padding_horizontal"
                    android:textStyle="bold"
                    android:text="@string/detail_info_alcoholic" />
                <TextView
                    android:id="@+id/tv_info_alcoholic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:layout_marginEnd="@dimen/padding_horizontal" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:layout_marginEnd="@dimen/padding_horizontal"
                    android:textStyle="bold"
                    android:text="@string/detail_info_glass" />
                <TextView
                    android:id="@+id/tv_info_glass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:layout_marginEnd="@dimen/padding_horizontal" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/detail_ingredient_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_vertical"
            android:layout_marginBottom="@dimen/padding_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/detail_instruction_title" />

        <TextView
            android:id="@+id/tv_instruction_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:layout_marginBottom="@dimen/padding_vertical"
            tools:text="Instruction body" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>